--- a/esp8266sampler/platformio.ini
+++ b/esp8266sampler/platformio.ini
@@ -17,5 +17,5 @@ board = d1_mini
 framework = arduino
 monitor_speed = 115200
 upload_speed = 1000000
-lib_deps =
+lib_deps = knolleary/PubSubClient
 
