--- a/esp32c3phase/platformio.ini
+++ b/esp32c3phase/platformio.ini
@@ -8,4 +8,7 @@ platform = espressif32
 board = esp32dev
 board_build.mcu = esp32c3
 monitor_speed = 115200
+lib_deps =
+    https://github.com/tzapu/WiFiManager
+    knolleary/PubSubClient
 
